--- a/bit-people/package.json
+++ b/bit-people/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bit-people",
+  "name": "bit-people-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,8 +9,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
-    "react-scripts": "3.4.1",
-    "react-time-ago": "^6.0.0"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
